--- a/style.css
+++ b/style.css
@@ -41,8 +41,16 @@ li {
     --subFont: 'Open Sans', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: var(--mainFont);
+}
+
+body.lock {
+    overflow: hidden;
 }
 
 
@@ -106,6 +114,22 @@ body {
     margin: auto;
 }
 
+.header__contact:hover img {
+    animation: callShake .5s infinite ease;
+}
+
+@keyframes callShake {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.98);
+    }
+    100% {
+        transform: scale(1.02);
+    }
+}
+
 .header__contact__block {
     margin-left: 20px;
 }
@@ -116,6 +140,14 @@ body {
     margin-bottom: 10px;
     background-color: var(--headerSubMainIbg);
     color: white;
+    transition: all .3s ease;
+}
+
+.header__button:hover {
+    transform: scale(1.05);
+    border-radius: 5px;
+    background-color: aliceblue;
+    color: black;
 }
 
 .header__societies {
@@ -209,6 +241,125 @@ body {
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(73deg) brightness(103%) contrast(103%);
 } */
 
+
+/* Popup order-call */
+
+.order-call__popup {}
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 10000;
+    overflow-y: auto;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .8s ease;
+}
+
+.popup.open {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup__body {
+    min-height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.popup__content {
+    position: relative;
+    min-width: 500px;
+    min-height: 435px;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 70px;
+    box-shadow: 0px 0px 20px 10px white;
+    background: url(https://i1.wp.com/www.advokat35.com/wp-content/uploads/revslider/demo-law-firm/slide-corporate-law-office-2.jpg?fit=1920%2C750) center/cover no-repeat;
+    transform: perspective(600px) translateY(-100%) rotateX(45deg);
+    transition: all .8s ease;
+}
+
+.popup.open .popup__content {
+    transform: perspective(600px) translateY(0) rotateX(0);
+}
+
+.popup__close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    /* width: 40px; */
+    /* border: 4px solid rgba(255, 255, 255, 1); */
+    border-radius: 20%;
+    padding: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.popup__close img {
+    width: 30px;
+}
+
+.popup__title {
+    margin-top: 40px;
+    margin-bottom: 50px;
+    color: white;
+    font-size: 1.7rem;
+    align-self: normal;
+    text-align: center;
+    background: rgba(100, 100, 100, .7);
+    padding: 10px 0;
+}
+
+.popup__form {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.popup__line {
+    margin-bottom: 30px;
+}
+
+.popup__input {
+    padding: 10px 15px;
+    background-color: rgba(170, 170, 170, 1);
+    color: white;
+    font-size: 1.3rem;
+    border-radius: 3px;
+}
+
+.popup__input::placeholder {
+    color: white;
+}
+
+.popup__area {
+    padding: 5px;
+    width: 350px;
+    height: 80px;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+}
+
+.popup__submit {
+    margin-top: 40px;
+    padding: 15px 22px;
+    background-color: rgba(100, 100, 100, 1);
+    color: white;
+}
+
+
+/* Popup order-call */
+
 .header__subabout {
     background: rgba(132, 121, 116, 0.8);
     position: sticky;
@@ -228,12 +379,35 @@ body {
 }
 
 .header__item {
-    padding: 10px;
     list-style: none;
 }
 
 .header__link {
+    padding: 10px;
     color: white;
+    transition: all 0.3s ease;
+    display: block;
+    position: relative;
+}
+
+.header__link::before {
+    content: '';
+    transition: all 0.3s ease;
+    opacity: 0;
+    visibility: hidden;
+    width: 0%;
+    height: 3px;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    bottom: 0;
+    background-color: white;
+}
+
+.header__link:hover::before {
+    visibility: visible;
+    opacity: 1;
+    width: 100%;
 }
 
 
@@ -446,6 +620,13 @@ body {
     color: black;
     text-align: center;
     font-size: 1.6rem;
+    transition: all .3s ease;
+}
+
+.services__link:hover {
+    transform: scale(1.03);
+    background-color: black;
+    color: white;
 }
 
 
@@ -529,6 +710,15 @@ body {
     font-family: 'Open Sans';
     cursor: pointer;
     color: #fff;
+    transition: all .3s ease;
+    display: inline-block;
+}
+
+.lawyer__show:hover {
+    background: white;
+    color: black;
+    border-radius: 5px;
+    transform: scale(1.1);
 }
 
 
@@ -724,6 +914,7 @@ details p {
     justify-content: center;
     margin: 30px auto 0 auto;
     border-radius: 10px;
+    transition: all 0.3s ease;
 }
 
 .price__button::after {
@@ -731,6 +922,11 @@ details p {
     display: inline-block;
     width: 30px;
     height: 30px;
+}
+
+.price__button:hover {
+    background-color: black;
+    transform: scale(1.05);
 }
 
 
@@ -797,6 +993,14 @@ details p {
     color: white;
     background: rgb(2, 0, 36);
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, var(--headerMainIbg) 50%);
+    transition: all 0.5s ease;
+}
+
+.contacts__button:hover {
+    background: white;
+    color: black;
+    transform: scale(1.05);
+    border-radius: 20px;
 }
 
 .contacts__societies {
@@ -898,6 +1102,22 @@ details p {
 }
 
 @media(max-width: 768px) {
+    .popup__content {
+        min-width: 300px;
+        padding: 15px 40px;
+        background: url(https://i1.wp.com/www.advokat35.com/wp-content/uploads/revslider/demo-law-firm/slide-corporate-law-office-2.jpg?fit=1920%2C750) left/cover no-repeat;
+    }
+    .popup__close {
+        right: 3px;
+        top: 3px;
+    }
+    .popup__line {
+        margin-bottom: 35px;
+    }
+    .popup__input {
+        font-size: 1.4rem;
+    }
+    /* popup */
     /* header */
     .header__order-call {
         display: flex;
@@ -1006,12 +1226,55 @@ details p {
 }
 
 @media(max-width:425px) {
+    .popup__form {
+        font-size: 1.3rem;
+    }
+    .popup__content {
+        min-width: 280px;
+        padding: 15px 20px;
+    }
+    .popup__title {
+        font-size: 1.5rem;
+        line-height: 2.2rem;
+    }
+    .popup__line {
+        margin-bottom: 30px;
+    }
+    .popup__input {
+        font-size: 1.3rem;
+        width: 280px;
+    }
+    .popup__area {
+        padding: 5px;
+        width: 290px;
+        height: 90px;
+        font-size: 1.1rem;
+        line-height: 1.5rem;
+    }
+    /* popup */
     .header__order-call {
         padding: 8px 6px;
     }
 }
 
 @media(max-width:375px) {
+    .popup__content {
+        min-width: 265px;
+        padding: 15px 20px;
+    }
+    .popup__title {
+        font-size: 1.4rem;
+        line-height: 2rem;
+    }
+    .popup__input {
+        font-size: 1.3rem;
+        width: 250px;
+    }
+    .popup__area {
+        width: 270px;
+        height: 100px;
+    }
+    /* popup */
     .about__push {
         max-height: 440px;
         min-width: 300px;
